@@ -12,7 +12,7 @@ public class LocaleConfig {
   @Bean
   public LocaleResolver localeResolver() {
     AcceptHeaderLocaleResolver resolver = new AcceptHeaderLocaleResolver();
-    resolver.setDefaultLocale(Locale.of("pt", "BR"));
+    resolver.setDefaultLocale(new Locale("pt", "BR"));
     return resolver;
   }
 }
